# Procclaw

./: .gitignore  CELERY-COMPARISON.md  COMPARISON.md  GAPS-PLAN.md  IMPLEMENTATION_PLAN.md  PLAN-QUEUE-SYSTEM.md  PLAN-trade-jobs.md  README.md  TODO.md  WORKFLOW-PLAN.md  pyproject.toml
docs/: PLAN-self-healing-v2.md  PLAN-self-healing.md  PLAN-session-logs.md  SELF-HEALING-V2.md
examples/skill/: README.md  SKILL.md
skill/: SKILL.md
specs/: self-healing-business-logs.md  self-healing-v2-api.md  self-healing-v2-database.md  self-healing-v2-models.md  self-healing-v2-queue.md  self-healing-v2-run-scope.md  self-healing-v2-ui.md
src/procclaw/: __init__.py  config.py  db.py  models.py  openclaw.py  secrets.py  service.py  sla.py
src/procclaw/api/: __init__.py  server.py
src/procclaw/cli/: __init__.py  client.py  main.py
src/procclaw/core/: __init__.py  composite.py  concurrency.py  dedup.py  dependencies.py  dlq.py  eta.py  healing_engine.py  healing_queue.py  health.py  job_wrapper.py  locks.py  log_utils.py  operating_hours.py  output_parser.py  priority.py  queue_manager.py  resources.py  results.py  retry.py  revocation.py  scheduler.py  self_healing.py  supervisor.py  trade_analytics.py  trade_parser.py  triggers.py  watchdog.py  workflow.py
src/procclaw/web/static/: index.html
tests/: __init__.py  test_enterprise.py  test_features.py  test_healing_engine.py  test_healing_v2.py  test_healing_v2_api.py  test_job_wrapper.py  test_new_features.py  test_resilience.py  test_sla.py  test_stress.py  test_unhappy_paths.py  test_workflows.py  test_wrapper_integration.py
tests/mock_jobs/: continuous_job.py  failing_job.py  heartbeat_job.py  http_job.py  success_job.py  test_jobs.yaml
